--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build-and-test-ubuntu:
     - stack upgrade
     - mkdir bin
     # Workaround gitlab memory limits with a swapfile
-    - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
+    # - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
     # Needed for tests that print UTF8 characters such as motus
     # Same issue as https://github.com/commercialhaskell/stack/issues/793
 
@@ -57,7 +57,7 @@ build-and-test-ubuntu-wsl:
     - stack upgrade
     - mkdir bin
     # Workaround gitlab memory limits with a swapfile
-    - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
+    # - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
     # Needed for tests that print UTF8 characters such as motus
     # Same issue as https://github.com/commercialhaskell/stack/issues/793
 
@@ -159,7 +159,7 @@ build-and-test-ubuntu-non-static:
     - stack upgrade
     - mkdir prefix-test
     # Workaround gitlab memory limits with a swapfile
-    - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
+    # - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
     # Needed for tests that print UTF8 characters such as motus
     # Same issue as https://github.com/commercialhaskell/stack/issues/793
 
@@ -186,7 +186,7 @@ build-and-test-ubuntu-devel:
     - stack upgrade
     - mkdir prefix-test
     # Workaround gitlab memory limits with a swapfile
-    - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
+    # - dd if=/dev/zero of=/var/tmp/swapfile bs=1M count=2048 && mkswap /var/tmp/swapfile && chmod 600 /var/tmp/swapfile && swapon /var/tmp/swapfile && free
     # Needed for tests that print UTF8 characters such as motus
     # Same issue as https://github.com/commercialhaskell/stack/issues/793
 
