--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -14,6 +14,8 @@ jobs:
           enable-stack: true
           stack-version: "latest"
       - run: |
+            sudo apt update
+            sudo apt install -y g++-8
             stack setup
             make
             make install CXX=g++-8 prefix=ngless_path/ngless
