BLD Force gcc-8 to avoid megahit compile errors

--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -23,7 +23,7 @@ jobs:
         run: stack setup
 
       - name: Build Static NGLess and dependencies
-        run: make static
+        run: make static CXX=g++-8
 
       - name: Build NGLess modules
         run: make modules
